--- a/recipes/sam3/meta.yaml
+++ b/recipes/sam3/meta.yaml
@@ -9,16 +9,29 @@ package:
 source:
   url: https://github.com/facebookresearch/sam3/archive/{{ git_hash }}.tar.gz
   sha256: b50d5f85bc57f13ef8c1b7fe485688bc0f76f58d18078ce9b505acb3bcfa408b
+  patches:
+    # https://github.com/facebookresearch/sam3/pull/167
+    - 167-update_setuptools_to_find_all_subpackages.patch
+    # https://github.com/facebookresearch/sam3/pull/196
+    - 196-lazy_import_decord.patch
+    # triton seems to be only used in
+    # sample_one_point_from_error_center
+    # which doesn't seem to be used in any sam3 codepath
+    # So i'm going to lazy import this to avoid the whole triton (and compiler)
+    # requirement
+    - 0001-Avoid-importing-triton-since-it-doesn-t-seem-used.patch
+    # numpy and ftfy are pinned too hard in sam3
+    - loosen_dependencies.patch
 
 build:
   noarch: python
-  script: {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation
+  script: python -m pip install . -vv
   number: 0
 
 requirements:
   host:
     - python {{ python_min }}
-    - setuptools >=64
+    - setuptools
     - wheel
     - pip
   run:
@@ -32,6 +45,11 @@ requirements:
     - typing_extensions
     - huggingface_hub
     - einops
+    - pytorch
+    - einops >=0.8.0
+    # They use pycocotools's mask utils alot
+    - pycocotools
+    - psutil
 
 test:
   imports:
