--- a/recipes/sam3/meta.yaml
+++ b/recipes/sam3/meta.yaml
@@ -13,7 +13,11 @@ source:
     # https://github.com/facebookresearch/sam3/pull/167
     - 167-update_setuptools_to_find_all_subpackages.patch
     # https://github.com/facebookresearch/sam3/pull/196
-    - 196-lazy_import_decord.patch
+    # - 196-lazy_import_decord.patch
+    # Decord is simply unmaintained and the codepath doesn't really use
+    # that much reuse of a single video instance
+    # I (hmaarrfk) rewrote it in pyav
+    - use_pyav_instead_of_decord.patch
     # triton seems to be only used in
     # sample_one_point_from_error_center
     # which doesn't seem to be used in any sam3 codepath
@@ -50,6 +54,7 @@ requirements:
     # They use pycocotools's mask utils alot
     - pycocotools
     - psutil
+    - av
 
 test:
   imports:
